--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ background-color: rgb(134, 230, 243)
 
 @font-face{
     font-family: "future";
-    src: url("Outrun \ future\ Bold.otf");
+    src: url("future.outrun-future-bold-italic");
 }
 
 h1{
