--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,51 @@
 body{
-background-color: rgb(134, 230, 243)
-}
+    background-color: rgb(0, 0, 0)
+    }
+    
+    @font-face{
+        font-family: "future";
+        src: url("future.outrun-future-bold-italic.otf");
+    }
+    
+    h1{
+        color: rgb(0, 0, 0);
+        font-family: "future";
+        text-align: center;
+        font-size: 50px;
+        margin: 0;
+    }
 
-@font-face{
-    font-family: "future";
-    src: url("future.outrun-future-bold-italic");
-}
+    h2{
+        font-family: "future";
+        text-align: center;
+        margin:0;
+    }
 
-h1{
-    color: rgb(134, 230, 243)
-}
+    .product-space{
+        padding: 20px 20px;
+        text-align: center;
+    }
+
+    .phantom-card{
+        background-color: black;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        text-align: center;
+        width: 20%;
+        border: 5px solid white;
+        border-radius: 10px;
+        margin: 0px 10px 0px;
+        transition: 0.3s;
+        display: inline-block;
+    }
+
+    .phantom-info{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: 0.8s;
+        display: inline-block;
+    }
+
+
+    
