--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
     }
     
     h1{
-        color: rgb(0, 0, 0);
+        color: white;
         font-family: "future";
         text-align: center;
         font-size: 50px;
@@ -60,5 +60,36 @@ body{
         cursor: pointer;
     }
 
+    .princess-card{
+        background-color: black;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        text-align: center;
+        width: 20%;
+        border: 5px solid white;
+        border-radius: 10px;
+        margin: 0px 10px 0px;
+        transition: 0.3s;
+        display: inline-block;
+    }
 
-    
+    .princess-info{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: 0.8s;
+        display: inline-block;
+    }
+
+    .add-button{
+        width: 75%;
+        outline: white;
+        border-radius: 24px;
+        padding: 10px;
+        border: 3px solid white;
+        background-color: transparent;
+        color: white;
+        font-size: 18px;
+        font-weight: bold;
+        cursor: pointer;
+    }
