--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,37 @@ body{
         font-weight: bold;
         cursor: pointer;
     }
+
+    .bio-card{
+        background-color: black;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        text-align: center;
+        width: 20%;
+        border: 5px solid white;
+        border-radius: 10px;
+        margin: 0px 10px 0px;
+        transition: 0.3s;
+        display: inline-block;
+    }
+
+    .bio-info{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: 0.8s;
+        display: inline-block;
+    }
+
+    .add-button{
+        width: 75%;
+        outline: white;
+        border-radius: 24px;
+        padding: 10px;
+        border: 3px solid white;
+        background-color: transparent;
+        color: white;
+        font-size: 18px;
+        font-weight: bold;
+        cursor: pointer;
+    }
